--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,6 +5,9 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+   <form action="/team" method="POST">
+     
+   </form>
  </body>
 </html>
 
