--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,7 +7,8 @@
  <body>
    <form action="/team" method="POST">
      Sign Up
-     <input type="submit" />
+     <label for=""></label>
+     <input type="submit" id="Submit"/>
    </form>
  </body>
 </html>
