--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -6,21 +6,20 @@
  </head>
  <body>
    <form action="/team" method="POST">
-     Sign Up
      <label for="team_name">Team Name: </label>
-     <input type="text" name="team_name"/>
+     <input type="text" name="team_name"/><br />
      <label for="coach">Coach: </label>
-     <input type="text" name="coach"/>
+     <input type="text" name="coach"/><br />
      <label for="point_guard">Point Guard: </label>
-     <input type="text" name="point_guard"/>
+     <input type="text" name="point_guard"/><br />
      <label for="shooting_guard">Shooting Guard: </label>
-     <input type="text" name="shooting_guard"/>
+     <input type="text" name="shooting_guard"/><br />
      <label for="small_forward">Small Forward: </label>
-     <input type="text" name="small_forward"/>
+     <input type="text" name="small_forward"/><br />
      <label for="power_forward">Power Forward: </label>
-     <input type="text" name="power_forward"/>
+     <input type="text" name="power_forward"/><br />
      <label for="center">Center: </label>
-     <input type="text" name="center"/>
+     <input type="text" name="center"/><br />
      <input type="submit" id="Submit"/>
    </form>
  </body>
