--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -6,20 +6,20 @@
  </head>
  <body>
    <form action="/team" method="POST">
-     <label for="team_name">Team Name: </label>
-     <input type="text" name="team_name"/><br />
+     <label for="name">Team Name: </label>
+     <input type="text" name="name"/><br />
      <label for="coach">Coach: </label>
      <input type="text" name="coach"/><br />
-     <label for="point_guard">Point Guard: </label>
-     <input type="text" name="point_guard"/><br />
-     <label for="shooting_guard">Shooting Guard: </label>
-     <input type="text" name="shooting_guard"/><br />
+     <label for="pg">Point Guard: </label>
+     <input type="text" name="pg"/><br />
+     <label for="sg">Shooting Guard: </label>
+     <input type="text" name="sg"/><br />
      <label for="small_forward">Small Forward: </label>
      <input type="text" name="small_forward"/><br />
-     <label for="power_forward">Power Forward: </label>
-     <input type="text" name="power_forward"/><br />
-     <label for="center">Center: </label>
-     <input type="text" name="center"/><br />
+     <label for="pf">Power Forward: </label>
+     <input type="text" name="pf"/><br />
+     <label for="c">Center: </label>
+     <input type="text" name="c"/><br />
      <input type="submit" id="Submit"/>
    </form>
  </body>
