--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -14,8 +14,8 @@
      <input type="text" name="pg"/><br />
      <label for="sg">Shooting Guard: </label>
      <input type="text" name="sg"/><br />
-     <label for="small_forward">Small Forward: </label>
-     <input type="text" name="small_forward"/><br />
+     <label for="sf">Small Forward: </label>
+     <input type="text" name="sf"/><br />
      <label for="pf">Power Forward: </label>
      <input type="text" name="pf"/><br />
      <label for="c">Center: </label>
